syntax = "proto3";

service MessageService {
  rpc GetMessageStream(GetMessageStreamRequest) returns (stream Message);
  rpc PostMessage(Message) returns (PostMessageResponse);
}

message GetMessageStreamRequest {}

message PostMessageResponse {
  string message_id = 1;
  string status = 2;
}

message Message {
  string id = 1;
  string text = 2;
  int64 create_time = 3;
  string author_name = 4;
}